--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -55,9 +55,8 @@
 @media screen and (max-width: 768px) {
 .navbar-header{
     padding: 0%;
-    background-image: linear-gradient(to bottom right, rgb(4, 4, 4), rgb(8, 7, 6), rgb(255, 255, 255));
-    /* background: rgba(0, 0, 0, .1);
-    backdrop-filter: blur(50px); */
+    background: rgba(0, 0, 0, .1);
+    backdrop-filter: blur(50px);
 padding-bottom: 10px;
 }
     .nav {
